--- a/pom.xml
+++ b/pom.xml
@@ -116,11 +116,6 @@
   		<version>2.7</version>
   	</dependency>
   	<dependency>
-  		<groupId>org.springframework.security</groupId>
-  		<artifactId>spring-security-web</artifactId>
-  		<version>4.1.3.RELEASE</version>
-  	</dependency>
-  	<dependency>
   		<groupId>org.postgresql</groupId>
   		<artifactId>postgresql</artifactId>
   		<version>9.2-1002-jdbc4</version>
@@ -144,6 +139,16 @@
   		<groupId>commons-net</groupId>
   		<artifactId>commons-net</artifactId>
   		<version>3.6</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.security</groupId>
+  		<artifactId>spring-security-web</artifactId>
+  		<version>3.2.10.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.security</groupId>
+  		<artifactId>spring-security-config</artifactId>
+  		<version>3.2.10.RELEASE</version>
   	</dependency>
   </dependencies>
 </project>
