--- a/pom.xml
+++ b/pom.xml
@@ -143,12 +143,17 @@
   	<dependency>
   		<groupId>org.springframework.security</groupId>
   		<artifactId>spring-security-web</artifactId>
-  		<version>3.2.10.RELEASE</version>
+  		<version>4.0.4.RELEASE</version>
   	</dependency>
   	<dependency>
   		<groupId>org.springframework.security</groupId>
   		<artifactId>spring-security-config</artifactId>
-  		<version>3.2.10.RELEASE</version>
+  		<version>4.0.4.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>ch.qos.logback</groupId>
+  		<artifactId>logback-classic</artifactId>
+  		<version>1.2.3</version>
   	</dependency>
   </dependencies>
 </project>
