--- a/pom.xml
+++ b/pom.xml
@@ -155,5 +155,10 @@
   		<artifactId>logback-classic</artifactId>
   		<version>1.2.3</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.security</groupId>
+  		<artifactId>spring-security-taglibs</artifactId>
+  		<version>4.0.4.RELEASE</version>
+  	</dependency>
   </dependencies>
 </project>
